style.css
@font-face {
  font-family: 'ProductSans';
  src: url(./fonts/Product-Sans/ProductSans-Light.ttf);
}
@font-face {
  font-family: 'ProductSans Bold';
  src: url(./fonts/Product-Sans/ProductSans-Bold.ttf);
}

* {
  padding: 0;
  margin: 0;
  color: #444;
  /* border: 1px solid orangered; */
  font-family: 'Raleway', sans-serif;
  font-family: 'ProductSans';
}
html {
  background-color: #e6e7e9;
  /* background: radial-gradient(black 15%, transparent 16%) 0 0,
    radial-gradient(black 15%, transparent 16%) 8px 8px,
    radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 0 1px,
    radial-gradient(rgba(255, 255, 255, 0.1) 15%, transparent 20%) 8px 9px;
  background-color: #282828;
  background-size: 16px 16px; */

  /* 
  background-image: url(https://thegrue.com/wp-content/themes/gridmag/assets/images/background.png);
  background-position: left top;
  background-size: auto;
  background-repeat: repeat; */

  background-color: #bde;
  background-color: #2f2f2f33;
  background-image: radial-gradient(#bbb 10%, transparent 11%),
    radial-gradient(#bbb 10%, transparent 11%);
  background-size: 10px 10px;
  background-position: 0 0, 5px 5px;
  background-repeat: repeat;
}

.cover {
  z-index: 0;
  height: 100vh;
  width: 100%;
}
.a4-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-items: center;
}
.left {
  display: block;
  min-width: 25vw;
}
.right {
  display: block;
  min-width: 10vw;
}
.a4 {
  z-index: 100;
  background: #f7f7f7;
  margin: 200px 0;
  /* height: 1000px;
  width: 800px; */
  height: 63rem; /* a4 ratio 1.4 */
  width: 45rem;

  box-shadow: 20px 13px 30px #0002;

  position: relative;
}

.gh-svg,
.ln-svg {
  opacity: 0.7;
}
.gh-svg:hover {
  cursor: pointer;
  opacity: 1;
  filter: invert(13%) sepia(20%) saturate(468%) hue-rotate(173deg)
    brightness(54%) contrast(91%);
}
.ln-svg:hover {
  cursor: pointer;
  opacity: 1;
  filter: invert(29%) sepia(74%) saturate(1221%) hue-rotate(194deg)
    brightness(67%) contrast(88%);
}
.glass {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  gap: 2rem;
  padding: 11rem 0;
  box-sizing: border-box;
  /* ///// */
  z-index: 200;
  position: absolute;
  height: 63rem;
  width: 7rem;
  left: -80px;
  top: 5rem;
  background-color: #ccc1;
  /* border-radius: 10% / 1.5%; */
  backdrop-filter: blur(18px);
  box-shadow: 15px 15px 40px #0003;
}
.clipboard-message {
  font-family: 'ProductSans Bold';
  position: absolute;
  bottom: -75px;
  left: 60px;
  /* height: 10px; */
  /* width: 10px; */
  /* background-color: red; */
  color: #777;
  font-size: 1.2rem;
  transition: 2s;
}
.hidden {
  display: none;
}

.sticker {
  z-index: 200;
  position: absolute;
  height: 95px;
  /* width: 195px; */
  /* top: 70px; */
  bottom: -45px;
  left: -50px;
  background-color: #fff7;
  background-color: #ffcb74dd;
  background-color: #fbbc0566;
  background-color: #4285f4bb;
  background-color: #46d7d288;
  background-color: #ea4335ee;
  background-color: #ffff77aa;
  background-color: #ffee22dd;
  backdrop-filter: blur(3px);
  box-shadow: 10px 5px 7px #0001;
  /*  */
  box-sizing: border-box;
  line-height: 30px;
  padding: 35px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}
.phone,
.email {
  cursor: pointer;
  color: #222;
  font-family: 'ProductSans Bold';
  font-size: 1.2rem;
  flex: 1;
}
.phone:hover,
.email:hover {
  opacity: 0.5;
}
.phone:active,
.email:active {
  opacity: 0.7;
}
/* .phone {
  flex: 1;
}
.email {
  flex: 1;
} */

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.avatar,
.full-name {
  flex: 1 1 1;
}
.avatar {
  margin-right: 1rem;
  z-index: 200;
  border-radius: 50%;
  height: 140px;
  width: 140px;
  backdrop-filter: blur(5px);
  box-shadow: 10px 5px 14px #0004;

  background-image: url('./img/8BE0C012-6F14-4AA2-9A56-33C0B809DAE0_1_201_a.jpeg');
  background-repeat: no-repeat;
  background-size: 103%;
}

.full-name {
  font-family: 'Rubik', Sans-Serif;
  font-family: 'ProductSans Bold';

  margin-left: 20px;
  font-weight: 100;
  font-size: 2.8rem;
}
.full-name span {
  font-family: 'Rubik', Sans-Serif;
  font-family: 'ProductSans';

  padding: 0px;
}
.profession {
  font-family: 'ProductSans';
  /* margin: 0; */
  margin-bottom: 0;
  margin-left: 20px;
  padding: 3px 20px;
  font-size: 1.2rem;
  color: #222;
  background-color: #ffee22;
}
.title {
  position: relative;
}
.triangle {
  position: absolute;
  right: -29px;
  bottom: -0.4px;
  width: 0;
  height: 0;
  border-top: 29.5px solid #ffee22;
  border-right: 29.5px solid transparent;
}
p {
  color: #777;
  font-size: 0.9rem;
}

h1,
h2,
h3,
h4 {
  font-family: 'ProductSans Bold';
}

h2 {
  font-weight: 600;
  margin-bottom: 20px;
  letter-spacing: 0.3rem;
}
h3 {
  font-size: 1.1rem;
  font-weight: 600;
  margin-bottom: 5px;
  letter-spacing: 0.2rem;
}
h4 {
  font-size: 0.8rem;
  font-weight: 600;
  margin-bottom: 5px;
}
ul {
  padding-left: 17px;
  margin-bottom: 40px;
}
li {
  color: #777;

  font-size: 0.9rem;
  padding-left: 10px;
}

.footer {
  height: 200px;
  margin-top: 300px;
}

.a4 .wrapper {
  padding: 60px 50px;
}

.a4 header {
  /* background-color: darkgray; */
  margin-bottom: 40px;
  letter-spacing: 0.3rem;
}

.a4 .content-wrapper {
  /* background-color: darkgray; */
  display: flex;
}

.a4 .content-wrapper aside {
  padding: 0 20px;
  flex: 4;
}
.a4 .content-wrapper .content {
  border-left: 2px solid #333;
  padding: 0 20px;
  flex: 7;
}
.a4 .content-wrapper aside ul {
  margin-bottom: 70px;
}
.a4 .content-wrapper aside li {
  margin-bottom: 5px;
}
.a4 .content-wrapper aside h2 {
  margin-bottom: 1rem;
}
.a4 .content-wrapper aside h3 {
  margin-top: 20px;
}
.a4 .content-wrapper .content ul:last-child {
  margin-bottom: 0;
}

.skills h2 {
  margin-bottom: 0.2rem;
}
.skills h3 {
  margin-bottom: 1.2rem;
}

